; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_gouraudTable.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_gouraudTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i8* }
%struct.TYPE_10__ = type { i8* }
%struct.TYPE_9__ = type { i8* }
%struct.TYPE_8__ = type { i8* }
%struct.TYPE_7__ = type { i64 }

@gouraudA = common dso_local global %struct.TYPE_11__ zeroinitializer, align 8
@gouraudB = common dso_local global %struct.TYPE_10__ zeroinitializer, align 8
@gouraudC = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@gouraudD = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, %struct.TYPE_7__*)* @gouraudTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gouraudTable(i32* %0, i32* %1, %struct.TYPE_7__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.TYPE_7__* %2, %struct.TYPE_7__** %6, align 8
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = trunc i64 %10 to i32
  %12 = shl i32 %11, 3
  store i32 %12, i32* %7, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i8* @T1ReadWord(i32* %13, i32 %14)
  store i8* %15, i8** getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @gouraudA, i32 0, i32 0), align 8
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* %7, align 4
  %18 = add nsw i32 %17, 2
  %19 = call i8* @T1ReadWord(i32* %16, i32 %18)
  store i8* %19, i8** getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @gouraudB, i32 0, i32 0), align 8
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* %7, align 4
  %22 = add nsw i32 %21, 4
  %23 = call i8* @T1ReadWord(i32* %20, i32 %22)
  store i8* %23, i8** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @gouraudC, i32 0, i32 0), align 8
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* %7, align 4
  %26 = add nsw i32 %25, 6
  %27 = call i8* @T1ReadWord(i32* %24, i32 %26)
  store i8* %27, i8** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @gouraudD, i32 0, i32 0), align 8
  ret void
}

declare dso_local i8* @T1ReadWord(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
